--- a/Proyecto1.ipynb
+++ b/Proyecto1.ipynb
@@ -2081,7 +2081,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.metrics import silhouette_score\n",
+    "\n",
+    "# Calcular el coeficiente de silueta\n",
+    "silueta = silhouette_score(X, kmeans.labels_)\n",
+    "print(f\"El coeficiente de silueta es: {silueta}\")"
+   ]
   },
   {
    "cell_type": "code",
