--- a/Proyecto1.ipynb
+++ b/Proyecto1.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +157,7 @@
        "4                 796          Boomers  "
       ]
      },
-     "execution_count": 99,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
        "'\\nfrom ydata_profiling import ProfileReport\\nprofile = ProfileReport(df)\\nprofile\\nprofile.to_file(\"profiler.html\")\\n'"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +342,7 @@
        "4             796          Boomers  "
       ]
      },
-     "execution_count": 101,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -458,7 +458,7 @@
        "0             793  Generation X  "
       ]
      },
-     "execution_count": 102,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -667,7 +667,7 @@
        "4  Albania1987           NaN  2.156625e+09           796.0          Boomers  "
       ]
      },
-     "execution_count": 104,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -680,7 +680,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "fd6d5502670d48399058196b79f5c085",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Summarize dataset:   0%|          | 0/5 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c2c81858bac340308326e846800bc0db",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Generate report structure:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3437aa1f7123413d8b20be44b60b301a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Render HTML:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "069e26400dde44d791fc09b946b35ae6",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Export report to file:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "\n",
+    "from ydata_profiling import ProfileReport\n",
+    "profile = ProfileReport(df)\n",
+    "profile\n",
+    "profile.to_file(\"profiler.html\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -866,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1093,7 +1163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1321,7 +1391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1562,7 +1632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1580,7 +1650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1590,7 +1660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1607,7 +1677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1658,7 +1728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1690,7 +1760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1734,7 +1804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1746,7 +1816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1780,7 +1850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1790,7 +1860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1823,7 +1893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1855,7 +1925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1873,7 +1943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1934,7 +2004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1967,7 +2037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1993,7 +2063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2019,7 +2089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2054,7 +2124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2079,7 +2149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2111,7 +2181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2139,7 +2209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
