--- a/reg_log.ipynb
+++ b/reg_log.ipynb
@@ -558,7 +558,8 @@
     "print(accuracy)\n",
     "\n",
     "disp = ConfusionMatrixDisplay(confusion_matrix=conf, display_labels=logisticRegr.classes_)\n",
-    "disp.plot()"
+    "fig, ax = plt.subplots(figsize=(10, 5))  # Ajusta el tamaño según tus necesidades\n",
+    "disp.plot(ax=ax)"
    ]
   },
   {
